# ML_ops

./: .gitignore  README.md  pyproject.toml
app/: grpc_server.py  main.py
app/.ipynb_checkpoints/: config-checkpoint.py  models_registry-checkpoint.py  schemas-checkpoint.py
app/ml/.ipynb_checkpoints/: __init__-checkpoint.py  trainer-checkpoint.py
app/proto/: model_service_pb2_grpc.py
app/proto/.ipynb_checkpoints/: model_service-checkpoint.proto  model_service_pb2-checkpoint.py  model_service_pb2_grpc-checkpoint.py
clients/.ipynb_checkpoints/: examples-checkpoint.http  grpc_client-checkpoint.py
dashboard/: streamlit_app.py
dashboard/.ipynb_checkpoints/: streamlit_app-checkpoint.py
tests/: test_api.py
tests/.ipynb_checkpoints/: test_api-checkpoint.py
